[UX-317] fix a bug where the icons would not render in FFX; tweak spacing

--- a/less/components/pipeline-result.less
+++ b/less/components/pipeline-result.less
@@ -49,16 +49,11 @@
     width: 25%;
 
     svg {
-      padding-right: 30px;
-      overflow: visible;
+      margin-right: 10px;
     }
 
     span {
       vertical-align: top;
-    }
-
-    div {
-      padding-bottom: 10px;
     }
   }
 }
